Project

General

Profile

Actions

Fix #51116

closed

osd: Run osd bench test to override default max osd capacity for mclock.

Added by Sridhar Seshasayee almost 3 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
Normal
Category:
Administration/Usability
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
pacific
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Related issues 1 (0 open1 closed)

Copied to RADOS - Backport #51117: pacific: osd: Run osd bench test to override default max osd capacity for mclock.ResolvedSridhar SeshasayeeActions
Actions #1

Updated by Backport Bot almost 3 years ago

  • Copied to Backport #51117: pacific: osd: Run osd bench test to override default max osd capacity for mclock. added
Actions #2

Updated by Sridhar Seshasayee almost 3 years ago

  • Tracker changed from Feature to Fix
  • Category set to Administration/Usability

Removed the classification of the tracker as a "Feature". This is better classified as a "Fix" with the aim of improving the usability of mclock features.

Actions #3

Updated by Sridhar Seshasayee over 2 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF